Remove webhooks integration

--- a/package.json
+++ b/package.json
@@ -1,13 +1,12 @@
 {
-  "name": "@moroo/wdio-slack-reporter",
-  "description": "Reporter from WebdriverIO using Incoming webhook and Web API to send results to Slack.",
+  "name": "@ognjenvlad/wdio-slack-reporter",
+  "description": "Reporter from WebdriverIO using Web API to send results to Slack.",
   "author": {
-    "name": "moroo Lee",
-    "email": "moroo.lee@gmail.com"
+    "name": "ognjen Vlad",
+    "email": "ogauzz1@gmail.com"
   },
-  "homepage": "https://github.com/morooLee/wdio-slack-reporter",
   "license": "MIT",
-  "version": "2.0.21",
+  "version": "1.0.0",
   "main": "build/index.js",
   "types": "build/index.d.ts",
   "keywords": [
@@ -24,31 +23,23 @@
   },
   "repository": {
     "type": "git",
-    "url": "https://github.com/morooLee/wdio-slack-reporter.git"
+    "url": "https://github.com/ognjenVlad/wdio-slack-reporter.git"
   },
-  "scripts": {
-    "build": "yarn tsc",
-    "test": "yarn jest --detectOpenHandles",
-    "test:cov": "yarn jest --detectOpenHandles --coverage"
-  },
+  "scripts": {},
   "dependencies": {
     "@slack/types": "^2.0.0",
     "@slack/web-api": "^6.1.0",
-    "@slack/webhook": "^6.0.0",
     "@wdio/logger": "^7.5.3",
     "@wdio/reporter": "7.16.3",
     "@wdio/types": "7.16.3"
   },
   "devDependencies": {
-    "@types/jest": "^27.0.2",
     "@typescript-eslint/eslint-plugin": "^5.3.1",
     "@typescript-eslint/parser": "^5.3.1",
     "eslint": "^8.2.0",
     "eslint-config-prettier": "^8.3.0",
     "eslint-plugin-prettier": "^4.0.0",
-    "jest": "^27.0.6",
     "prettier": "^2.2.1",
-    "ts-jest": "^27.0.3",
     "ts-node": "^10.1.0",
     "tsconfig-paths": "^3.9.0",
     "typescript": "^4.2.4"
