--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
   "dependencies": {
     "@slack/types": "^2.0.0",
     "@slack/web-api": "^6.1.0",
+    "@slack/webhook": "^6.0.0",
     "@wdio/logger": "^7.5.3",
     "@wdio/reporter": "7.16.3",
     "@wdio/types": "7.16.3"
