--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
     "email": "ogauzz1@gmail.com"
   },
   "license": "MIT",
-  "version": "1.0.48",
+  "version": "1.0.56",
   "main": "build/index.js",
   "types": "build/index.d.ts",
   "keywords": [
@@ -34,14 +34,15 @@
     "@wdio/types": "7.16.3"
   },
   "devDependencies": {
+    "mocha": "9.2.2",
     "@typescript-eslint/eslint-plugin": "^5.3.1",
     "@typescript-eslint/parser": "^5.3.1",
-    "eslint": "^8.2.0",
-    "eslint-config-prettier": "^8.3.0",
-    "eslint-plugin-prettier": "^4.0.0",
-    "prettier": "^2.2.1",
-    "ts-node": "^10.1.0",
-    "tsconfig-paths": "^3.9.0",
-    "typescript": "^4.2.4"
+    "eslint": "8.12.0",
+		"eslint-config-prettier": "8.5.0",
+		"eslint-plugin-json": "3.1.0",
+		"eslint-plugin-prettier": "4.0.0",
+    "prettier": "2.5.1",
+    "ts-node": "^10.7.0",
+    "typescript": "^4.6.3"
   }
 }
